Report test coverage and integrate with SonarLint