@@ -31,7 +31,7 @@
     (software.amazon.awssdk:netty-nio-client:jar:2.9.24) for COG and GWC Azure plugin -->
     <netty.version>4.1.41.Final</netty.version>
     <lombok.version>1.18.30</lombok.version>
-    <mapstruct.version>1.5.5.Final</mapstruct.version>
+    <mapstruct.version>1.6.0.Beta1</mapstruct.version>
     <flyway.version>9.22.3</flyway.version>
     <testcontainers.version>1.19.1</testcontainers.version>
     <fork.javac>true</fork.javac>
@@ -974,7 +974,9 @@
     <profile>
       <id>dependencyConvergence</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <property>
+          <name>!skipDependencyConvergence</name>
+        </property>
       </activation>
       <dependencyManagement>
         <dependencies>
@@ -1159,7 +1161,9 @@
     <profile>
       <id>cve</id>
       <activation>
-        <activeByDefault>true</activeByDefault>
+        <property>
+          <name>!skipCve</name>
+        </property>
       </activation>
       <dependencyManagement>
         <dependencies>
@@ -1211,6 +1215,161 @@
           </dependency>
         </dependencies>
       </dependencyManagement>
+    </profile>
+    <profile>
+      <id>coverage</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <property>
+          <name>coverage</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED 
+				--add-opens=java.base/java.lang=ALL-UNNAMED 
+				--add-opens=java.base/java.util=ALL-UNNAMED 
+				--add-opens=java.base/java.lang.reflect=ALL-UNNAMED 
+				--add-opens=java.base/java.text=ALL-UNNAMED 
+				--add-opens=java.desktop/java.awt.font=ALL-UNNAMED 
+				--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED 
+				--add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+				${surefire.jacoco.args}</argLine>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <argLine>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED 
+				--add-opens=java.base/java.lang=ALL-UNNAMED 
+				--add-opens=java.base/java.util=ALL-UNNAMED 
+				--add-opens=java.base/java.lang.reflect=ALL-UNNAMED 
+				--add-opens=java.base/java.text=ALL-UNNAMED 
+				--add-opens=java.desktop/java.awt.font=ALL-UNNAMED 
+				--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED 
+				--add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+				${failsafe.jacoco.args}</argLine>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>before-unit-test-execution</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+                <configuration>
+                  <destFile>${project.build.directory}/jacoco-ut.exec</destFile>
+                  <propertyName>surefire.jacoco.args</propertyName>
+                </configuration>
+              </execution>
+              <execution>
+                <id>after-unit-test-execution</id>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <phase>test</phase>
+                <configuration>
+                  <dataFile>${project.build.directory}/jacoco-ut.exec</dataFile>
+                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>before-integration-test-execution</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+                <phase>pre-integration-test</phase>
+                <configuration>
+                  <destFile>${project.build.directory}/jacoco-it.exec</destFile>
+                  <propertyName>failsafe.jacoco.args</propertyName>
+                </configuration>
+              </execution>
+              <execution>
+                <id>after-integration-test-execution</id>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <phase>post-integration-test</phase>
+                <configuration>
+                  <dataFile>${project.build.directory}/jacoco-it.exec</dataFile>
+                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>merge-unit-and-integration</id>
+                <goals>
+                  <goal>merge</goal>
+                </goals>
+                <phase>post-integration-test</phase>
+                <configuration>
+                  <fileSets>
+                    <fileSet>
+                      <directory>${project.build.directory}</directory>
+                      <includes>
+                        <include>*.exec</include>
+                      </includes>
+                    </fileSet>
+                  </fileSets>
+                  <destFile>${project.build.directory}/jacoco.exec</destFile>
+                </configuration>
+              </execution>
+              <execution>
+                <id>create-merged-report</id>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <phase>post-integration-test</phase>
+                <configuration>
+                  <dataFile>${project.build.directory}/jacoco.exec</dataFile>
+                  <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                </configuration>
+              </execution>
+              <execution>
+                <id>check</id>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+                <phase>verify</phase>
+                <configuration>
+                  <rules>
+                    <rule>
+                      <element>CLASS</element>
+                      <excludes>
+                        <exclude>*Test</exclude>
+                        <exclude>*IT</exclude>
+                      </excludes>
+                      <limits>
+                        <limit>
+                          <counter>LINE</counter>
+                          <value>COVEREDRATIO</value>
+                          <minimum>0%</minimum>
+                        </limit>
+                      </limits>
+                    </rule>
+                  </rules>
+                  <dataFile>${project.build.directory}/jacoco.exec</dataFile>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
